# oakd-ros-simple

./: .gitmodules  CMakeLists.txt  README.md  package.xml  rviz.rviz
include/: main.h
launch/: main.launch  test.launch
msg/: bbox.msg
src/: main.cpp  main_cv.cpp  main_ros.cpp  test.cpp
